@@ -116,6 +116,7 @@ VideoRenderers
 Обновлен японский перевод (автор Socket774).
 Обновлен немецкий перевод (автор Klaus1189).
 Обновлен китайский (Simplified) перевод (авторы beter и insolo).
+Обновлен итальянский перевод (автор Lord Maius).
 
 Обновлены библиотеки:
 	jsoncpp 1.0.0-212 git-gc1e834a.
