@@ -869,12 +869,12 @@ int CMainFrame::OnCreate(LPCREATESTRUCT lpCreateStruct)
 	m_bToggleShaderScreenSpace = s.fToggleShaderScreenSpace;
 
 #ifdef _WIN64
-	m_strTitle.Format(L"%s x64 - v%s (build %d)", ResStr(IDR_MAINFRAME), CString(MPC_VERSION_STR), MPC_VERSION_REV);
+	m_strTitle.Format(L"%s x64 - v%s", ResStr(IDR_MAINFRAME), CString(MPC_VERSION_STR));
 #else
-	m_strTitle.Format(L"%s - v%s (build %d)", ResStr(IDR_MAINFRAME), CString(MPC_VERSION_STR), MPC_VERSION_REV);
+	m_strTitle.Format(L"%s - v%s", ResStr(IDR_MAINFRAME), CString(MPC_VERSION_STR));
 #endif
 #if (MPC_VERSION_STATUS == 0)
-	m_strTitle.Append(L" beta");
+	m_strTitle.AppendFormat(L" (build %d) beta",  MPC_VERSION_REV);
 #endif
 #if ENABLE_2PASS_RESIZE
 	m_strTitle.Append(L" 2passresize"); // test build
